fix: show indication that actions was executed successfully fix: clearer button interactions chore: potentially fix notes not appearing docs: add disclaimer about Lucide and overlap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -209,5 +209,6 @@
     height: 16px;
 }
 
-
-
+.icon-action {
+    cursor: pointer;
+}
